Micro-Application/k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  namespace: shopping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-container
          image: avinashg0/micro:api-1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: shopping
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 3000
