Micro-Application/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deploy
  namespace: shopping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: fe-container
          image: avinashg0/micro:fe-1
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: fe-svc
  namespace: shopping
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
