Micro-Application/k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deploy
  namespace: shopping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user-container
          image: avinashg0/micro:user-1
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: shopping
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - port: 80
      targetPort: 3001
